Закончена документация на Swagger
